; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-struct/src/extr_struct.c_struct_s_members.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-struct/src/extr_struct.c_struct_s_members.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RClass = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"__members__\00", align 1
@E_TYPE_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"uninitialized struct\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"corrupted struct\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.RClass*)* @struct_s_members to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @struct_s_members(i32* %0, %struct.RClass* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.RClass*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store %struct.RClass* %1, %struct.RClass** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load %struct.RClass*, %struct.RClass** %4, align 8
  %8 = call i32 @mrb_obj_value(%struct.RClass* %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @mrb_intern_lit(i32* %9, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @struct_ivar_get(i32* %6, i32 %8, i32 %10)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i64 @mrb_nil_p(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %2
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* @E_TYPE_ERROR, align 4
  %18 = call i32 @mrb_raise(i32* %16, i32 %17, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  br label %19

19:                                               ; preds = %15, %2
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @mrb_array_p(i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %27, label %23

23:                                               ; preds = %19
  %24 = load i32*, i32** %3, align 8
  %25 = load i32, i32* @E_TYPE_ERROR, align 4
  %26 = call i32 @mrb_raise(i32* %24, i32 %25, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i64 0, i64 0))
  br label %27

27:                                               ; preds = %23, %19
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @struct_ivar_get(i32*, i32, i32) #1

declare dso_local i32 @mrb_obj_value(%struct.RClass*) #1

declare dso_local i32 @mrb_intern_lit(i32*, i8*) #1

declare dso_local i64 @mrb_nil_p(i32) #1

declare dso_local i32 @mrb_raise(i32*, i32, i8*) #1

declare dso_local i32 @mrb_array_p(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
